--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,11 @@
       <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
       <meta name="msapplication-config" content="/browserconfig.xml">
       <meta name="theme-color" content="#333333">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Nightscout" />
+      <meta property="og:description" content="Cormac's Nightscout Page" />
+      <meta property="og:url" content="https://ns.cormac.xyz/" />
+      <meta property="og:image" content="https://cormac.xyz/images/nightscout/nightscout.png" />
       <link rel="preload" href="css/ui-darkness/jquery-ui.min.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <link rel="preload" href="css/jquery.tooltips.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <link rel="preload" href="css/main.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
