--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
       <meta property="og:description" content="Cormac's Nightscout Page" />
       <meta property="og:url" content="https://ns.cormac.xyz/" />
       <meta property="og:image" content="https://cormac.xyz/images/nightscout/nightscout.png" />
+      <meta name="theme-color" content="#ffffff" />
       <link rel="preload" href="css/ui-darkness/jquery-ui.min.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <link rel="preload" href="css/jquery.tooltips.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <link rel="preload" href="css/main.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
