--- a/views/index.html
+++ b/views/index.html
@@ -28,13 +28,12 @@
       <meta name="msapplication-TileColor" content="#00a300">
       <meta name="msapplication-TileImage" content="/images/mstile-144x144.png">
       <meta name="msapplication-config" content="/browserconfig.xml">
-      <meta name="theme-color" content="#333333">
+      <meta name="theme-color" content="#ffffff">
       <meta property="og:type" content="website">
       <meta property="og:title" content="Nightscout" />
       <meta property="og:description" content="Cormac's Nightscout Page" />
       <meta property="og:url" content="https://ns.cormac.xyz/" />
       <meta property="og:image" content="https://cormac.xyz/images/nightscout/nightscout.png" />
-      <meta name="theme-color" content="#ffffff" />
       <link rel="preload" href="css/ui-darkness/jquery-ui.min.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <link rel="preload" href="css/jquery.tooltips.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <link rel="preload" href="css/main.css?v=<%= locals.cachebuster %>" as="style" onload="this.onload=null;this.rel='stylesheet'">
