--- a/views/index.html
+++ b/views/index.html
@@ -292,7 +292,7 @@
                     <div>head <span class="head"></span></div>
                     <p>
                       <div>License: <a href="http://www.gnu.org/licenses/agpl.html" target="_blank">AGPL</a></div>
-                      <div>Copyright © 2017 <a href="https://github.com/nightscout/cgm-remote-monitor/graphs/contributors" target="_blank">Nightscout contributors</a></div>
+                      <div>Copyright © 2017 </div>
                     </p>
                     <div class="links">
                         <a href="https://github.com/nightscout/cgm-remote-monitor/releases" target="_blank">Release Notes</a><br />
